<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallaper"
    tools:context=".QuizResultsActivity">

    <!-- Контейнер для белого круга и изображения clapping -->
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp">

        <!-- Белый круг -->
        <ImageView
            android:id="@+id/circle_background"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/white_circle"
            android:scaleType="centerInside" />

        <!-- Изображение clapping -->
        <ImageView
            android:id="@+id/resultImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:src="@drawable/clapping"
            android:scaleType="centerInside" />
    </FrameLayout>

    <TextView
        android:id="@+id/successTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="40dp"
        android:text="@string/your_res" />

    <LinearLayout
        android:id="@+id/resultsContainer"
        android:layout_below="@id/successTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/correctAnswers"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/correct"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#00C855" />

        <TextView
            android:id="@+id/incorrectAnswers"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/incorrect"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#DD2C00" />
    </LinearLayout>

    <!-- НОВЫЙ TextView для мотивационной фразы -->
    <TextView
        android:id="@+id/motivationQuote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/resultsContainer"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:padding="20dp"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="italic"
        android:background="#4D000000"
        android:visibility="gone"
        android:text="Загрузка мотивации..." />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startNewQuizBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/start_new_quiz"
        android:layout_alignParentBottom="true"
        android:layout_margin="30dp"
        android:background="@drawable/round_topic" />
</RelativeLayout>